--- a/WAVES 23/glasseventsCARD.css
+++ b/WAVES 23/glasseventsCARD.css
@@ -43,8 +43,9 @@
 }
 
 .single_event{
+  
+    position: relative;
     transform-style: preserve-3d;
-    
 }
 
 .event_card{
@@ -52,17 +53,10 @@
     border-radius: 20px;
     transform-style: preserve-3d;/*cover the whole content*/
     background:rgba(255, 255, 255, 0.1);
-    background:rgba(255, 255, 255, 0.1);
+   
     min-width: 300px;
     min-height: 550px;
     backdrop-filter: blur(10px);
-    border: 1px solid rgba(255, 255, 255, 0.5);
-    border-top: 1px solid rgba(255, 255, 255, 0.75);
-    border-left: 1px solid rgba(255, 255, 255, 0.75);
-    border-radius: 20px;
-    box-shadow: 0 25px 45px rgba(0, 0, 0, 0.05);
-
-    backdrop-filter: blur(10px);    
     border: 1px solid rgba(255, 255, 255, 0.5);
     border-top: 1px solid rgba(255, 255, 255, 0.75);
     border-left: 1px solid rgba(255, 255, 255, 0.75);
@@ -85,10 +79,6 @@
     border-left: 1px solid rgba(255, 255, 255, 0.75);
     border-radius: 10px;
     box-shadow: 0 25px 45px rgba(0, 0, 0, 0.05);
-  
-}
-
-.event_no{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -96,18 +86,20 @@
     color: #fff;
 }
 
+
+
 .event_img{
      position: absolute;
     top: 40px;
-   left: 36px;
+    left: 36px;
     z-index: 10;
-    transform: translateX(-50%) translateZ(120px);
+    transform: translateZ(80px);
     width: 230px;
     padding: 10px;
    
     height: 230px;
     background: rgba(255, 255, 255, 0.2);
-    transform: translateZ(80px);
+    
     backdrop-filter: blur(10px);
     border: 1px solid rgba(255, 255, 255, 0.5);
     border-top: 1px solid rgba(255, 255, 255, 0.75);
@@ -165,4 +157,17 @@
 .event_desc a:hover{
     opacity: 1;
     background: green;
+}
+
+@media only screen and(max-width:500px){
+    .event_no{
+        top: 50px;
+        left: -30px;
+        width: 10px;
+        height: 30px;
+        font-size: 0.6rem;
+    }
+    .event_card{
+        width: 270px;
+    }
 }
